# mulle-dispense

./: .gitignore  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  Makefile  README.md  RELEASENOTES.md  install.sh  mulle-dispense  mulle-dispense-completion.sh  mulle-make  mulle-mingw-dispense
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh
cola/: description.md.bud  properties.plist
dox/reference/: index.md
mulle-project/: formula-info.sh  version-info.sh
src/: mulle-dispense-copy.sh  mulle-dispense-mingw.sh  mulle-dispense-mv-force  mulle-dispense-osspecific.sh  mulle-make-build.sh  mulle-make-common.sh  mulle-make-dispense.sh  mulle-make-plugin.sh
src/plugins/: autoconf.sh  cmake.sh  configure.sh  xcodebuild.sh
templates/: CMakePackage.txt.scion
test/: run-test
test/01-dispense/: run-test
tests/: run-test.sh
tests/01-dispense/: run-test  run-test.sh
tests/03-autoconf/: run-test.sh
